added a dark mode option

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
 <!--=========simple line icons==========-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
 
+<!-- Extra styling to ensure icons adjust to dark mode -->
+<style>
+  .dark-mode .icon {
+    color: #f1f1f1;
+  }
+</style>
+
   </head>
   <body>
     <div id="root"></div>
